FIXAjuste icon logo

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="AgenderBarber" />
     <meta name="description" content="A melhor plataforma de agendamento e gestão para barbearias." />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" href="icon.svg" />
+    <link rel="icon" href="logotipo.svg" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +30,7 @@
                     <li><a onclick="closeMenu()" href="#plans">Planos</a></li>
                     <li><a onclick="closeMenu()" href="#about">Sobre</a></li>
                 </ul>
-                <a class="button" onclick="closeMenu()" href="#contact">Comece grátis</a>
+                <a class="button" onclick="closeMenu()" href="http://127.0.0.1:8000">Comece grátis</a>
             </div>
             <button aria-label="Abrir menu" onclick="openMenu()" class="open-menu">☰</button>
             <button aria-label="Fechar menu" onclick="closeMenu()" class="close-menu">✖</button>
