FIX: Ajuste na link de card plano para plataforma

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -175,7 +175,7 @@
                         <li>✔️ Link de agendamento</li>
                         <li>✔️ Lembretes por e-mail</li>
                     </ul>
-                    <a href="#contact" class="button">Começar grátis</a>
+                    <a href="http://127.0.0.1:8000" class="button">Começar grátis</a>
                 </div>
 
                 <div class="card destaque">
@@ -187,7 +187,7 @@
                         <li>✔️ Gestão de clientes e serviços</li>
                         <li>✔️ Relatórios e estatísticas</li>
                     </ul>
-                    <a href="#contact" class="button">Assinar agora</a>
+                    <a href="http://127.0.0.1:8000" class="button">Assinar agora</a>
                 </div>
 
                 <div class="card">
@@ -199,7 +199,7 @@
                         <li>✔️ Integração com Instagram</li>
                         <li>✔️ Suporte prioritário</li>
                     </ul>
-                    <a href="#contact" class="button">Assinar agora</a>
+                    <a href="http://127.0.0.1:8000" class="button">Assinar agora</a>
                 </div>
             </div>
         </div>
